# inkmanager

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
inkmanager/: app.py  database.py  models.py  schemas.py  security.py
inkmanager/routes/: auth.py  inks.py  needles.py  products.py  users.py
migrations/: env.py
migrations/versions/: 2a89477be88b_create_all_tables.py  6e46f6438bb8_create_tables.py  719591dce42a_create_all_tables.py
tests/: conftest.py  factories.py  test_auth.py  test_ink.py  test_needle.py  test_product.py  test_security.py  test_user.py
